# HackHelloWorld

./: CMakeLists.txt  Doxyfile  README.md  build.sh  run.bat  run.sh
src/: HackHelloWorld.cpp  HackHelloWorld.h  Main.cpp
tests/: HackHelloWorldTest.cpp
